[gd_scene load_steps=6 format=3 uid="uid://br2w2dnnf6ygj"]

[ext_resource type="Script" uid="uid://cdwd3dgvbafwp" path="res://Difficulty selector.gd" id="1_ih8ps"]
[ext_resource type="Texture2D" uid="uid://dk1jsd8c1pd3u" path="res://Draws/Cursa1.png" id="2_7ms2f"]
[ext_resource type="Texture2D" uid="uid://bluokmf7kdjmd" path="res://Draws/1000CC.png" id="3_mpp1l"]
[ext_resource type="Texture2D" uid="uid://c1s7pqy10hl58" path="res://Draws/1600CC.png" id="4_50bik"]
[ext_resource type="Texture2D" uid="uid://b0iaonkoymtqi" path="res://Draws/2000cc.png" id="5_58n01"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ih8ps")

[node name="Cursa1" type="Sprite2D" parent="."]
z_index = -9
texture_filter = 1
position = Vector2(574, 326)
scale = Vector2(2.30389, 2.30389)
texture = ExtResource("2_7ms2f")

[node name="1000CC" type="Button" parent="."]
auto_translate_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -134.005
offset_right = 110.0
offset_bottom = -66.005
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Start2" type="Sprite2D" parent="1000CC"]
texture_filter = 1
position = Vector2(112, 32.5)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_mpp1l")

[node name="1000CC2" type="Button" parent="."]
auto_translate_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -57.48
offset_right = 110.0
offset_bottom = 10.52
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Start2" type="Sprite2D" parent="1000CC2"]
texture_filter = 1
position = Vector2(112, 32.5)
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_50bik")

[node name="1000CC3" type="Button" parent="."]
auto_translate_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = 20.81
offset_right = 110.0
offset_bottom = 88.81
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Start2" type="Sprite2D" parent="1000CC3"]
texture_filter = 1
position = Vector2(112, 32.5)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_58n01")

[connection signal="pressed" from="1000CC" to="." method="_on_cc_pressed"]
[connection signal="pressed" from="1000CC2" to="." method="_on_cc_2_pressed"]
[connection signal="pressed" from="1000CC3" to="." method="_on_cc_3_pressed"]
